# conan-fakeit

./: .travis.yml  LICENSE  README.md  build.py  catch2-patch.diff  conanfile.py
test/: CMakeLists.txt  conanfile.py  main.cpp
test_package/: CMakeLists.txt  conanfile.py  test_app.cpp
